tests/unit/compile/cases/syntax-errors/10.html-tag-broken.t
foo <div <br/> bar
---- THROW% ----
Unexpected "<"; expected: "/>" or ">" near `<br/> bar`
